k8s/pi-stock-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: pi-stock-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: pi-stock-service
                port:
                  number: 3001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - example.com
      secretName: pi-stoc-tls
status:
  loadBalancer: {}
